# aoc

./: .gitattributes  Cargo.toml  template.rs
aoc-2015/: Cargo.toml
aoc-2015/input/: day1.txt  day10.txt  day11.txt  day12.txt  day13.txt  day14.txt  day15.txt  day16.txt  day17.txt  day18.txt  day19.txt  day2.txt  day20.txt  day21.txt  day22.txt  day23.txt  day24.txt  day25.txt  day3.txt  day4.txt  day5.txt  day6.txt  day7.txt  day8.txt  day9.txt
aoc-2015/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  main.rs
aoc-2021/: Cargo.toml
aoc-2021/input/: day1.txt  day10.txt  day11.txt  day12.txt  day13.txt  day14.txt  day15.txt  day16.txt  day17.txt  day18.txt  day19.txt  day2.txt  day20.txt  day21.txt  day22.txt  day23.txt  day24.txt  day25.txt  day3.txt  day4.txt  day5.txt  day6.txt  day7.txt  day8.txt  day9.txt
aoc-2021/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  main.rs
aoc-2022/: Cargo.toml
aoc-2022/input/: day1.txt  day10.txt  day11.txt  day12.txt  day13.txt  day14.txt  day15.txt  day16.txt  day17.txt  day18.txt  day19.txt  day2.txt  day20.txt  day21.txt  day22.txt  day23.txt  day24.txt  day25.txt  day3.txt  day4.txt  day5.txt  day6.txt  day7.txt  day8.txt  day9.txt
aoc-2022/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  main.rs
aoc-2023/: Cargo.toml
aoc-2023/input/: day1.txt  day10.txt  day11.txt  day12.txt  day13.txt  day14.txt  day15.txt  day16.txt  day17.txt  day18.txt  day19.txt  day2.txt  day20.txt  day21.txt  day22.txt  day23.txt  day24.txt  day25.txt  day3.txt  day4.txt  day5.txt  day6.txt  day7.txt  day8.txt  day9.txt
aoc-2023/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  main.rs
aoc-2024/: Cargo.toml
aoc-2024/input/: day1.txt  day10.txt  day11.txt  day12.txt  day13.txt  day14.txt  day15.txt  day16.txt  day17.txt  day18.txt  day19.txt  day2.txt  day20.txt  day21.txt  day22.txt  day23.txt  day24.txt  day25.txt  day3.txt  day4.txt  day5.txt  day6.txt  day7.txt  day8.txt  day9.txt
aoc-2024/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  main.rs
aoc-2025/: Cargo.toml
aoc-2025/input/: day1.txt  day10.txt  day11.txt  day12.txt  day2.txt  day3.txt  day4.txt  day5.txt  day6.txt  day7.txt  day8.txt  day9.txt
aoc-2025/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  main.rs
day1/: input
day1/src/: main.rs
day10/src/: main.rs
day11/src/: main.rs
day12/src/: main.rs
day13/src/: main.rs
day14/: Cargo.toml
day14/src/: main.rs
day15/: Cargo.toml  input
day15/src/: main.rs
day16/: input
day16/src/: .main.rs.rustfmt  main.rs
day17/src/: main.rs
day2/: input
day2/src/: main.rs
day3/: Cargo.toml
day3/src/: main.rs
day4/: input
day4/src/: main.rs
day5/: Cargo.toml
day5/src/: main.rs
day6/: input
day6/src/: main.rs
day7/src/: main.rs
day8/: Cargo.toml  input
day8/src/: main.rs
day9/src/: main.rs
input/: day08.txt  day14.txt  day23.txt
src/: aoc.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day21.rs  day25.rs  graph.rs  lib.rs  main.rs  point2d.rs  point3d.rs  range.rs
