[workspace]
members = [
    "aoc-2015",
    "aoc-2021",
    "aoc-2022",
]

[package]
name = "aoc-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
nom.workspace = true
num_enum.workspace = true
strum.workspace = true
strum_macros.workspace = true
is_type = "0.2"
thiserror = "1.0"
pretty_assertions = "1.3"

[dev-dependencies]
pretty_assertions.workspace = true

[workspace.dependencies]
anyhow = "1.0"
aoc-runner = { path = "." }
counter = "0.5"
itertools = "0.10"
nom = "7.0"
num_enum = "0.5"
pretty_assertions = "1.3"
strum = "0.24"
strum_macros = "0.24"

