cargo-features = ["workspace-inheritance"]
[package]
name = "aoc-2015"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc-runner = { workspace = true }
num_enum.workspace = true
strum.workspace = true
strum_macros.workspace = true
anyhow.workspace = true
counter.workspace = true
itertools.workspace = true
md5 = "0.7"
