cargo-features = ["workspace-inheritance"]
[package]
name = "aoc-2021"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc-runner.workspace = true
colored = "2.0.0"
counter = "0.5.2"
enumset = "1.0"
itertools = "0.10.1"
nom = "7.1.1"
num_enum.workspace = true
strum.workspace = true
strum_macros.workspace = true
