[package]
name = "aoc-2021"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc-runner.workspace = true
colored = "2.0.0"
counter.workspace = true
enumset = "1.0"
itertools.workspace = true
nom.workspace = true
num_enum.workspace = true
strum.workspace = true
strum_macros.workspace = true
anyhow.workspace = true
