cargo-features = ["workspace-inheritance"]
[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = { workspace = true }
num_enum.workspace = true
strum.workspace = true
strum_macros.workspace = true
anyhow.workspace = true
counter.workspace = true
itertools = "0.10.5"
