[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc-runner.workspace = true
num_enum.workspace = true
strum.workspace = true
strum_macros.workspace = true
anyhow.workspace = true
counter.workspace = true
itertools.workspace = true
nom.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

